app/media-server/flaresolverr/flaresolverr-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - env:
        - name: LOG_LEVEL
          value: info
        image: ghcr.io/flaresolverr/flaresolverr
        imagePullPolicy: Always
        name: flaresolverr
        # resources:
        #   requests:
        #     cpu: ${PRIORITY_3_CPU_LIMIT:=65m}
      restartPolicy: Always
status: {}
