app/media-server/flaresolverr/flaresolverr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8191
  selector:
    app: flaresolverr
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
