app/media-server/flaresolverr/flaresolverr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: flaresolverr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: flaresolverr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: flaresolverr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flaresolverr.home.adaminformatika.hu
    secretName: flaresolverr.home.adaminformatika.hu
